<resources>
    <string name="app_name">TaskRaze</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_button_text">Done</string>
    <string name="test_capital_letter">TEST_CAPITAL_LETTER</string>
    <string name="text_lower_case">text_lower_case</string>
    <string name="test">TEST</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="calendars_title">Calendars</string>
    <string name="add_new_task_button_description">Add new task button</string>
    <string name="log_in">Log in</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="log_out">Log out</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="delete_button_description">delete calendar</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="arrow_left_button_description">return to calendars screen</string>
    <string name="owner_double_dots">Owner:</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="whole_day_event">Whole day event</string>
    <string name="select_date">Select Date</string>
    <string name="create_new_calendar">Create new calendar</string>
    <string name="say_something">Say something…</string>
    <string name="chat">Chat</string>
    <string name="friends">Friends</string>
    <string name="search_results">Search results for</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="search">Search</string>
    <string name="sender_s_name">Sender\'s Name</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="profile_picture_of_user">Profile picture of user</string>
    <string name="friend_requests">Friend requests:</string>
    <string name="find_other_people_by_searching_their_email_addresses_or_usernames">Find other people by searching their email addresses or usernames</string>
    <string name="available_chats">Available chats</string>
    <string name="quit_chat">Are you sure you want to quit this chat?</string>
    <string name="choose_the_friend_to_start_a_new_chat_with">Choose the friend to start a new chat with</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="start_chat_with_selected_user">Start chat with selected user?</string>
    <string name="add_selected_user_to_shared_calendar">Add selected user to shared calendar?</string>
    <string name="request_pending">Request pending</string>
    <string name="delete_user">Delete user</string>
    <string name="are_you_sure_you_want_to_delete_this_user">Are you sure you want to delete this user?</string>
    <string name="choose_a_friend_to_add_to_this_calendar">Choose a friend to add to this calendar</string>
    <string name="no_internet_connection_some_features_may_not_work_properly">No internet connection. Some features may not work properly.</string>
    <string name="are_you_sure_you_want_to_quit_this_group">Are you sure you want to quit this group?</string>
    <string name="export_events">Export events</string>
    <string name="start_group_chat">Start group chat</string>
    <string name="more">More</string>
    <string name="choose_outlook_calendar_to_export_events">Choose outlook calendar to export events</string>
    <string name="choose_google_calendar_to_export_events">Choose google calendar to export events</string>
    <string name="export_events_into_which_calendar">Export events into which calendar?</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="tasks">Tasks</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="daily_tasks">Daily Tasks</string>
    <string name="weekly_tasks">Weekly Tasks</string>
    <string name="capitalMonday">M</string>
    <string name="capitalTuesday">TU</string>
    <string name="capitalWednesday">W</string>
    <string name="capitalThursday">TH</string>
    <string name="capitalFriday">F</string>
    <string name="capitalSaturday">SA</string>
    <string name="capitalSunday">SU</string>
    <string name="notification">Notification</string>
    <string name="month">Month</string>
    <string name="overlay_menu">Overlay Menu</string>
    <string name="recommendations">Automatic recommendations based on events and tasks</string>
    <string name="tag">Tag</string>
    <string name="no_available_friends_to_add_to_this_calendar">No available friends to add to this calendar</string>
    <string name="recommendation_title">Recommendation Title</string>


</resources>