<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:id="@+id/login_activity"
    tools:context=".app.authentication_activity.LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/log_in" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:layout_gravity="center"
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"/>


    <Button
        android:layout_gravity="center"
        android:id="@+id/buttonRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/cyan"
        android:textColor="@color/black"/>



</LinearLayout>