<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/midFragment_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCurrentUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginTop="15sp"
            android:layout_marginStart="20dp"
            android:text="@string/test" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />

    </LinearLayout>

    <Button
        android:id="@+id/openChatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat" />
    <Button
        android:id="@+id/openFriendsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_send_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="339dp"
        android:layout_marginBottom="629dp"
        android:contentDescription="@string/add_new_task_button_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/suggestedEventsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:scrollbars="vertical" />



</LinearLayout>