<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/midFragment_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/noInternetTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@android:color/white"
        android:text="@string/no_internet_connection_some_features_may_not_work_properly"
        android:background="@color/red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCurrentUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginTop="15sp"
            android:layout_marginStart="20dp"
            android:text="@string/test" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />

    </LinearLayout>

    <Button
        android:id="@+id/openChatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat" />
    <Button
        android:id="@+id/openFriendsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends" />

    <LinearLayout
        android:id="@+id/notification_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:padding="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/overlay_menu"
            android:textSize="25sp"
            android:layout_weight="2"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_overlay_menu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:gravity="center"
            android:scaleX="1.7"
            android:scaleY="1.7" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recommendations_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:padding="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:text="@string/recommendations"
            android:textSize="25sp"
            android:layout_weight="4"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_recommendations"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingEnd="15dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:scaleX="1.7"
            android:scaleY="1.7" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recommendedItemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="8dp"
        android:scrollbars="vertical" />



</LinearLayout>