<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@drawable/friend_request_background">

    <!-- Profile picture -->
    <ImageView
        android:id="@+id/imageViewProfilePictureRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account_circle_black_36dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="16dp"
        android:layout_weight="3"
        android:contentDescription="@string/profile_picture_of_user" />

    <!-- Sender's name -->
    <TextView
        android:id="@+id/textViewSenderNameRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sender_s_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:layout_weight="8"/>

    <!-- Accept button -->
    <ImageButton
        android:id="@+id/imageButtonAcceptRequest"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/tick_mark_48"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/accept"
        android:layout_weight="1"/>

    <!-- Reject button -->
    <ImageButton
        android:id="@+id/imageButtonRejectRequest"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/x_mark_48"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/reject"
        android:layout_marginStart="8dp"
        android:layout_weight="1"/>

</LinearLayout>