<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/bubbleIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_launcher_foreground"
        android:background="@drawable/baseline_circle_notifications_24"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/optionsContainer"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks" />

        <Button
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />

        <Button
            android:id="@+id/option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar" />
    </LinearLayout>

</FrameLayout>
